<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="411dp"
        android:layout_height="31dp"
        android:background="#951795"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/txtNomeCompleto"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/cadastro"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNomeCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nome_completo"
        android:textStyle="bold"
        android:labelFor="@id/inputNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCadastro" />

    <EditText
        android:id="@+id/inputNome"
        android:layout_width="391dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:background="@drawable/input_textbox"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNomeCompleto" />

    <TextView
        android:id="@+id/txtTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:labelFor="@id/telefone"
        android:text="@string/telefone"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNome" />

    <EditText
        android:id="@+id/telefone"
        android:layout_width="391dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:autofillHints="phone"
        android:background="@drawable/input_textbox"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefone" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/e_mail"
        android:textStyle="bold"
        android:labelFor="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="391dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_textbox"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <CheckBox
        android:id="@+id/chkIngressarEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ingressar_na_lista_de_emails"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/sexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkIngressarEmail" />

    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexo">

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            app:layout_constraintBottom_toTopOf="@+id/cidade"
            app:layout_constraintEnd_toStartOf="@+id/rbFeminino"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexo" />

        <RadioButton
            android:id="@+id/rbFeminino"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="190dp"
            android:text="@string/feminino"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexo" />
    </RadioGroup>


<TextView
        android:id="@+id/txtCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cidade"
        android:textStyle="bold"
        android:labelFor="@id/cidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSexo" />

    <EditText
        android:id="@+id/cidade"
        android:layout_width="385dp"
        android:layout_height="51dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:autofillHints="city"
        android:background="@drawable/input_textbox"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCidade" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="379dp"
        android:layout_height="49dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:entries="@array/listaUF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUF" />

    <TextView
        android:id="@+id/txtUF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/uf"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cidade" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="12dp"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="183dp"
        android:layout_height="52dp"
        android:layout_marginTop="63dp"
        android:text="@string/limpar"
        app:layout_constraintEnd_toStartOf="@+id/btnSalvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>